<resources>
    <string name="app_name">QuizApp</string>


    <string name="score">Score 0/8</string>
    <string name="question_number">1/8 Question</string>

    <string name="question_1">What technology is used to make telephone calls over the internet possible?</string>
    <string name="question1_A">Bluetooth</string>
    <string name="question1_B">Ethernet</string>
    <string name="question1_C">NFC</string>
    <string name="question1_D">VoIP</string>
    <string name="answer_1">VoIP</string>

    <string name="question_2">Which computer language is the most widely used?</string>
    <string name="question2_A">C#</string>
    <string name="question2_B">Swift</string>
    <string name="question2_C">PHP</string>
    <string name="question2_D">Java</string>
    <string name="answer_2">Java</string>

    <string name="question_3"> Which of the following is an important step towards the paperless concept?</string>
    <string name="question3_A">Doxing</string>
    <string name="question3_B">Debugging</string>
    <string name="question3_C">Downloading</string>
    <string name="question3_D">Digitizing</string>
    <string name="answer_3">Digitizing</string>

    <string name="question_4"> Approximately, how much data exists in the digital universe today? </string>
    <string name="question4_A">40 Gigabytes</string>
    <string name="question4_B">40 Terabytes</string>
    <string name="question4_C">40 Megabytes</string>
    <string name="question4_D">40 Zetabytes</string>
    <string name="answer_4">2.7 Zetabytes</string>

    <string name="question_5">Making a compressed digital archive might produce what type of file format?</string>
    <string name="question5_A"> PDF</string>
    <string name="question5_B"> JPEG</string>
    <string name="question5_C"> MP3</string>
    <string name="question5_D"> ZIP</string>
    <string name="answer_5"> JPEG</string>

    <string name="question_6">What is our channel name?</string>
    <string name="question6_A"> Tech Pro</string>
    <string name="question6_B"> Tech</string>
    <string name="question6_C"> Projects</string>
    <string name="question6_D"> Tech Projects</string>
    <string name="answer_6"> Tech Projects</string>

    <string name="question_7">What is most expensive laptop?</string>
    <string name="question7_A">Lenovo</string>
    <string name="question7_B"> HP</string>
    <string name="question7_C"> Asus</string>
    <string name="question7_D"> Dell</string>
    <string name="answer_7"> Lenovo</string>

    <string name="question_8">What is part of a database that holds only one type of information?</string>
    <string name="question8_A"> Report</string>
    <string name="question8_B"> Field</string>
    <string name="question8_C"> Record</string>
    <string name="question8_D"> File</string>
    <string name="answer_8"> Field</string>

    <string name="quiz_app">Quiz App</string>
    <string name="answer_verification">AnswerVerification</string>
    <string name="answer_verification2">AnswerVerification</string>
    <string name="_1_8_question">1/8 Question</string>
    <string name="selectedoption">SelectedOption</string>
    <string name="correctanswer">CorrectAnswer</string>

</resources>